# sar-toolkit

./: .gitignore  Makefile  README.md  pylintrc  pyproject.toml  requirements.txt
scripts/: autofocus_chips.py  chip_sicd.py  defocus_chips.py  defocus_sicd.py  main.py  test.py
scripts/configs/: base-config-aif.yaml  base-config-laptop-wsl.yaml  base-config-wsl.yaml  base-wsl-config.yaml
scripts/visualize/: chip_sicd.py  visualize_chips.py  visualize_cphd.py  visualize_sicd.py
stk/: chip.py  trainer.py
stk/autofocus/: defocus.py  pga.py
stk/utils/: sicd.py  signal.py
stk/visualize/: visualizer.py
