[tool.poetry]
# $ pip install pytemplate
name = "stk"
version = "0.0.1"
description = "Toolkit."
authors = ["Bradley Selee"]
license = "LICENSE.txt"

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
[tool.poetry.dependencies]
fire = "*"
matplotlib = "*"
numpy = "^1.26"
pandas = "*"
python = ">=3.8"
pytest = "*"
pyyaml = "*"
sarpy = "*"
tqdm = "*"

# Linters/formatters
mypy = "*"
pylint = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"